# Findray-Suzuki-Kurachi-2008

./: Makefile.am  Makefile.in  README  configure  configure.ac  in
src/: eventloop.c  exptable.c  fsk.c  input_para.c  insca.c  ion_concent1.c  ion_concent2.c  ipca.c  ito.c  syspara.h  system.c
src/ion_currents/: ica-l.c  ica-t.c  icab.c  ikatp.c  iki.c  ikna.c  ikp.c  ikr.c  iks.c  ikur.c  ina.c  inab.c  inaca.c  inak.c
